[package]
name = "elo"
description = "Rust crate for calculating players ratings based on elo ranking system"
version = "0.1.1"
authors = ["Ivan Pusic <450140+ivpusic@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/ivpusic/rust-elo"
repository = "https://github.com/ivpusic/rust-elo.git"

[dependencies]
